[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/itim-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/title.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.631373, 0.776471, 0.960784, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -172.0
margin_top = 16.0
margin_right = 172.0
margin_bottom = 176.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="Title"]
margin_right = 416.0
margin_bottom = 96.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = " [color=#c85e46]WE'RE A[/color]"
meta_underlined = false
text = " WE'RE A"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="RichTextLabel" parent="Title"]
margin_left = -8.0
margin_top = 72.0
margin_right = 408.0
margin_bottom = 168.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = " [color=#e1d53c]DRAGON[/color]"
meta_underlined = false
text = " DRAGON"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -176.0
margin_right = 128.0
margin_bottom = -24.0
custom_constants/separation = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="Buttons"]
margin_right = 256.0
margin_bottom = 20.0
text = "Start"

[node name="ButtonCredits" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 256.0
margin_bottom = 68.0
text = "Credits"

[node name="ButtonExit" type="Button" parent="Buttons"]
margin_top = 96.0
margin_right = 256.0
margin_bottom = 116.0
text = "Exit"

[connection signal="pressed" from="Buttons/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="Buttons/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="Buttons/ButtonExit" to="." method="_on_ButtonExit_pressed"]
